--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World! Site Title</title>
+    <title>Storage Bins - Bin #1</title>
   </head>
   <body>
-    <h1>Bin 1!</h1>
+    <h1>Bin 1</h1>
+    <p>- tools (saw, hammer, screw drivers, etc</p>
+    <p>- percussive massager with charging station</p>
+    <p>- 20lbs weighted blanket</p>
   </body>
 </html>
