--- a/bin01.html
+++ b/bin01.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storage Bins - Bin #1</title>
+    <title>Storage Bin 1</title>
   </head>
   <body>
     <h1>Bin 1</h1>
-    <p>- tools (saw, hammer, screw drivers, etc</p>
+    <p>- tools (saw, hammer, screw drivers, etc)</p>
     <p>- percussive massager with charging station</p>
     <p>- 20lbs weighted blanket</p>
   </body>
